<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">personalshopper</string>
    <string name="menu_settings">Settings</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="duration">Duration</string>
    <string name="start">Start</string>
    <string name="type">Type</string>
    <string name="address">Address</string>
    <string name="prize">Prize</string>
    <string name="sizefix">Size:</string>
    <string name="size">Size</string>
    <string name="shop">Shop</string>
    <string name="colour">Colour</string>
    <string name="brand">Brand</string>
    <string name="BuyBotton">Buy it!</string>
    <string name="ArticleImage">Article Image</string>

</resources>