<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="20dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

          <ImageView
              android:id="@+id/imageOneArticle"
              android:layout_width="250dp"
              android:layout_height="250dp"
              android:layout_centerHorizontal="true"
              android:contentDescription="@string/ArticleImage"
              android:src="@drawable/not_available" />

      </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/brandOneArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                android:textColor="#040404"
                android:textSize="22sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/typeOneArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dip"
                android:text="@string/type"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp" >

                <TextView
                    android:id="@+id/sizefixOneArticle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/sizefix"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/sizeOneArticle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textSize="17sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/colourOneArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginTop="1dip"
                android:text="@string/colour"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/shopOneArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/shop"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/addressOneArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dip"
                android:text="@string/address"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/prize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:text="@string/prize"
                android:textColor="#4682b4"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BuyBotton" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>