<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5dip" >
 
     <!--  ListRow Left sied Thumbnail image -->
    <LinearLayout android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:layout_alignParentLeft="true"
        android:background="@drawable/image_bg"
        android:layout_marginRight="5dip">
 
        <ImageView
            android:id="@+id/list_image"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:src="@drawable/ic_launcher"/>
 
    </LinearLayout>

  
    <TextView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/brand"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="17sp"
        android:textStyle="bold"/>
 
   
    <TextView
        android:id="@+id/type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/brand"
        android:textSize="12sp"
        android:layout_marginTop="0dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/type" />
    
    <TextView
        android:id="@+id/sizefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/type"
        android:layout_marginRight="2dp"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/sizefix"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/type"
        android:textSize="12sp"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/sizefix"
        android:text="@string/size" />
    
    <TextView
        android:id="@+id/colour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sizefix"
        android:layout_marginRight="2dp"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/colour"
        android:textSize="12sp" />
    
    
    <TextView
        android:id="@+id/shop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/colour"
        android:textSize="10sp"
        android:layout_marginTop="5dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/shop" />
 
    
    <TextView
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shop"
        android:textSize="10sp"
        android:layout_marginTop="0dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/address" />
    
    <TextView
        android:id="@+id/prize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/type"
        android:layout_marginRight="5dip"
        android:gravity="right"
        android:text="@string/prize"
        android:textColor="#4682b4"
        android:textSize="20sp"
        android:textStyle="bold" />
 
</RelativeLayout>